# OmniFiles

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: android.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  native_lister.cpp
app/src/main/kotlin/com/omnilabs/omfiles/: MainActivity.kt  OmniFilesApp.kt
app/src/main/kotlin/com/omnilabs/omfiles/archive/: ArchiveEngine.kt
app/src/main/kotlin/com/omnilabs/omfiles/core/: GlobalExceptionHandler.kt
app/src/main/kotlin/com/omnilabs/omfiles/di/: AppModule.kt  RepositoryModule.kt  StorageModule.kt
app/src/main/kotlin/com/omnilabs/omfiles/native_lister/: NativeFileLister.kt
app/src/main/kotlin/com/omnilabs/omfiles/preview/: FileSignatureDetector.kt  MimeTypeRegistry.kt  PreviewRegistry.kt  PreviewType.kt  PreviewViewModel.kt
app/src/main/kotlin/com/omnilabs/omfiles/recycle/: RecycleBinManager.kt
app/src/main/kotlin/com/omnilabs/omfiles/search/: SearchEngine.kt
app/src/main/kotlin/com/omnilabs/omfiles/utils/: FileUtils.kt  FormatUtils.kt  PermissionHandler.kt  SafUtils.kt
app/src/main/res/drawable/: ic_launcher_foreground.xml
app/src/main/res/values/: colors.xml  strings.xml  themes.xml
app/src/main/res/values-night/: colors.xml
app/src/test/java/com/omnilabs/omfiles/utils/: FormatUtilsTest.kt
gradle/: libs.versions.toml
(+69 files in other folders)
